Fix letter-spacing

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -9,7 +9,6 @@ body
   background-color: $backColor
   color: $frontColor
   font-family: Lato, sans-serif
-  letter-spacing: 0.1rem
 
 h1
   background-color: $accentColor
